--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 
 <section>
     <h2>Skills</h2>
-    <img src="/assets/img/musclebeach.jpg" alt="Muscle Beach" width="500" height="300">
+    <img src="/assets/img/musclebeach.png" alt="Muscle Beach" width="500" height="300">
     <br>
     <a href="#top">Go To The Top</a>
     <ul>
