--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
         }
 
         ul {
-            list-style-type: none;
-            padding: 0;
+            list-style-type: disc;
+            padding-left: 1.5em;
         }
 
         li {
@@ -37,7 +37,6 @@
     </style>
 </head>
 <body>
-    
 
 <header>
     <h1>Hunter's Resume</h1>
@@ -59,8 +58,12 @@
         <li>
             <strong>Brigham Young University, The University of Youtube</strong> - Provo, UT<br>
             Business Management, Expected Graduation: April 2024
-            <h1>Arnold Shows You How to Get Big</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/o9zCgPtsups" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <ul>
+                <li>
+                    <h1>Arnold Shows You How to Get Big</h1>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/o9zCgPtsups" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </li>
+            </ul>
         </li>
     </ul>
 </section>
@@ -82,10 +85,12 @@
 
 <section>
     <h2>Skills</h2>
-    <img src="/assets/img/musclebeach.png" alt="Muscle Beach" width="500" height="300">
-    <br>
-    <a href="#top">Go To The Top</a>
     <ul>
+        <li>
+            <img src="/assets/img/musclebeach.png" alt="Muscle Beach" width="500" height="300">
+            <br>
+            <a href="#top">Go To The Top</a>
+        </li>
         <li>Marketing: Social Media Marketing, Content Creation, SEO, Google Analytics</li>
         <li>Business Tools: Microsoft Office Suite (Word, Excel, PowerPoint), CRM</li>
         <li>Communication: Excellent written and verbal communication skills</li>
@@ -93,13 +98,25 @@
     </ul>
 </section>
 
+<section>
+    <h1>Interactive Tableau Graph</h1
 
-<h1>Interactive Tableau Graph</h1>
-   <div class='tableauPlaceholder' id='viz1681696132199' style='position: relative'><noscript><a href='#'><img alt='Is Your County Obese?                            Select your county to see how it compares with other counties in the country                         ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_16816959455680&#47;Obesity&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Regional_16816959455680&#47;Obesity' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_16816959455680&#47;Obesity&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1681696132199');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <ul>
+        <li>
+            <div class='tableauPlaceholder' id='viz1681696132199' style='position: relative'><noscript><a href='#'><img alt='Is Your County Obese?                            Select your county to see how it compares with other counties in the country                         ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_16816959455680&#47;Obesity&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Regional_16816959455680&#47;Obesity' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_16816959455680&#47;Obesity&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>
+            <script type='text/javascript'>                    var divElement = document.getElementById('viz1681696132199');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        </li>
+    </ul>
+</section>
 
-<footer>
-    <a href="index.html">Go Home</a>
-</footer>
+<section>
+    <footer>
+        <ul>
+            <li><a href="index.html">Go Home</a></li>
+        </ul>
+    </footer>
+</section>
 
 </body>
 </html>
+
