--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
         <li>
             <img src="/assets/img/musclebeach.png" alt="Muscle Beach" width="500" height="300">
             <br>
-            <a href="#top">Go To The Top</a>
+               <div class="center-bold"><a href="#top">Go To The Top</a></div>
         </li>
         <li>Marketing: Social Media Marketing, Content Creation, SEO, Google Analytics</li>
         <li>Business Tools: Microsoft Office Suite (Word, Excel, PowerPoint), CRM</li>
