--- a/about.html
+++ b/about.html
@@ -1,43 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<h<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hunter's Resume</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1em;
-        }
-
-        section {
-            margin: 2em;
-        }
-
-        h2 {
-            border-bottom: 2px solid #333;
-            padding-bottom: 0.5em;
-        }
-
-        ul {
-            list-style-type: disc;
-            padding-left: 1.5em;
-        }
-
-        li {
-            margin-bottom: 1em;
-        }
-    </style>
+    <link rel="stylesheet" href="scratch.css">
 </head>
-<body>
-
 <header>
     <h1>Hunter's Resume</h1>
 </header>
@@ -58,12 +25,8 @@
         <li>
             <strong>Brigham Young University, The University of Youtube</strong> - Provo, UT<br>
             Business Management, Expected Graduation: April 2024
-            <ul>
-                <li>
-                    <h1>Arnold Shows You How to Get Big</h1>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/o9zCgPtsups" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </li>
-            </ul>
+            <h1>Arnold Shows You How to Get Big</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/o9zCgPtsups" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </li>
     </ul>
 </section>
@@ -85,12 +48,11 @@
 
 <section>
     <h2>Skills</h2>
+    <img src="/assets/img/musclebeach.png" alt="Muscle Beach" width="500" height="300">
+    <br>
+    <a href="#top" class="center-bold">Go To The Top</a>
+
     <ul>
-        <li>
-            <img src="/assets/img/musclebeach.png" alt="Muscle Beach" width="500" height="300">
-            <br>
-               <div class="center-bold"><a href="#top">Go To The Top</a></div>
-        </li>
         <li>Marketing: Social Media Marketing, Content Creation, SEO, Google Analytics</li>
         <li>Business Tools: Microsoft Office Suite (Word, Excel, PowerPoint), CRM</li>
         <li>Communication: Excellent written and verbal communication skills</li>
@@ -98,25 +60,13 @@
     </ul>
 </section>
 
-<section>
-    <h1>Interactive Tableau Graph</h1
 
-    <ul>
-        <li>
-            <div class='tableauPlaceholder' id='viz1681696132199' style='position: relative'><noscript><a href='#'><img alt='Is Your County Obese?                            Select your county to see how it compares with other counties in the country                         ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_16816959455680&#47;Obesity&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Regional_16816959455680&#47;Obesity' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_16816959455680&#47;Obesity&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>
-            <script type='text/javascript'>                    var divElement = document.getElementById('viz1681696132199');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-        </li>
-    </ul>
-</section>
-
-<section>
-    <footer>
+<h1>Interactive Tableau Graph</h1>
+   <div class='tableauPlaceholder' id='viz1681696132199' style='position: relative'><noscript><a href='#'><img alt='Is Your County Obese?                            Select your county to see how it compares with other counties in the country                         ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_16816959455680&#47;Obesity&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Regional_16816959455680&#47;Obesity' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;Regional_16816959455680&#47;Obesity&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1681696132199');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+   <section>
+    <footer class="footer-div">
         <ul>
             <li><a href="index.html">Go Home</a></li>
         </ul>
     </footer>
 </section>
-
-</body>
-</html>
-
